--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/JadenCSS.css" />
+<link id='CSS'rel="stylesheet" href="css/JadenCSS - Copy.css" />
 
 </head>
 
 <body>
 
-<div class='pageSizeBox'>
+<div id='pageSizeBox' class='pageSizeBox'>
 
-	<div class='pageContentBox'>
+	<div id='pageContentBox' class='pageContentBox'>
 
 
 		<div class='JadenPicAndInfo'>
@@ -89,19 +89,18 @@
 			<p class='JadenGeneralText'>If any of my work intrests you, you would like to offer me a job, or just want contact me in general, please type your email in the box below and your comment in the box below that and then hit the submit button.
 			</p>
 
-			<form> 
+			<form  class='EmailAddressForm'  > 
 			    <label class='TextBoxTitle'>Your Email Address</label>
 			    <br>
 				<textarea class='JadenTextArea1'  placeholder="Type In Your Email Address..."></textarea>
 			</form>
 			<br>
-			<form> 
+			<form id='CommentSubmissionForm' class='CommentSubmissionForm'> 
 			    <label class='TextBoxTitle'>Your Inquiry/Question/Comment</label>
 			    <br>
 				<textarea class='JadenTextArea2' placeholder="Type In Your Inquiry/Question/Comment..."></textarea>
 				<br>
-				<button class='SubmitButton'>Submit</button>
-
+				<button id='SubmitButton' class='SubmitButton'>Submit</button>
 			</form>
 			
 		</div>
