--- a/index.html
+++ b/index.html
@@ -46,19 +46,12 @@
 				</div>
 
 
-				<!-- Contains Github and Linkdin links -->
+				<!-- Contains Github and Linkdin links + resume -->
 				<div class='JadenSocial'>
 
 					<h2 class='JadenJobText'>My Social Media: <a href="https://github.com/blaze500">Github</a>  <a href="https://www.linkedin.com/in/jaden-millington-8ab67b212/">Linkedin</a></h2>  <h2 class='JadenJobText'> My Resume:&nbsp; <a href="pdf/JadenResume.pdf" download>Here</a></h2>
 
 				</div>		
-
-				<!-- Contains link to my resume -->
-				<div class='JadenSocial'>
-		
-					<h2 class='JadenJobText'>My Downloadable Resume&nbsp; <a href="pdf/JadenResume.pdf" download>Here</a></h2>
-		
-				</div>				
 
 
 				<div class='JadenInfoBoxSpacing'></div>
